# cxx-serial

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
doc/: serial.dox
examples/: modbus.cpp  serial_cpp_example.cc
include/serial_cpp/: serial.h
include/serial_cpp/impl/: unix.h  win.h
src/: serial.cc
src/impl/: unix.cc  win.cc
src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
tests/: CMakeLists.txt  unix_serial_tests.cc
tests/proof_of_concepts/: tokenizer.cc
tests/unit/: unix_timer_tests.cc
