<?xml version="1.0"?>
<package>
  <name>serial_cpp</name>
  <version>1.3.4</version>
  <description>
    serial_cpp is a cross-platform, simple to use library for using serial ports on computers.
    This library provides a C++, object oriented interface for interacting with RS-232
    like devices on Linux and Windows.
  </description>

  <maintainer email="silvio@traversaro.it">William Woodall</maintainer>

  <license>MIT</license>

  <url type="website">http://wjwwood.github.com/serial/</url>
  <url type="repository">https://github.com/ami-iit/serial_cpp</url>
  <url type="bugtracker">https://github.com/ami-iit/serial_cpp/issues</url>

  <author email="wjwwood@gmail.com">William Woodall</author>
  <author email="ash.gti@gmail.com">John Harrison</author>

  <buildtool_depend>cmake</buildtool_depend>

  <!-- boost is only needed for test/proof_of_concepts which are not enabled by default -->
  <!--test_depend>boost</test_depend-->
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
